@@ -1,3 +1,8 @@
+2000-07-13  Havoc Pennington  <hp@pobox.com>
+
+	* backends/xml-entry.c (schema_node_extract_value): fix a
+	double-free
+
 2000-07-12  Havoc Pennington  <hp@pobox.com>
 
 	* configure.in: Bump library versions, bump to 0.6
